--- a/archives maths/C25/cours.tex
+++ b/archives maths/C25/cours.tex
@@ -107,7 +107,7 @@ $$P = \sum_{k=0}^{n}\frac{f^{(k)}(x_0)}{k!}(X-x_0)^k$$
     Soit $I$ ouvert tel que $0 \in I$, $f:I \to \R$, $P \in \R_n[X]$ tels que :
     $$f(0) = 0 \quad \text{et} \quad   f(x) \underset{x \to 0}{=} P(x)  + o\bigl(x^n\bigr)$$ \\
     Si $f$ est bijective (ou au moins injective) au voisinage de $0$, alors il existe $Q \in \R_n[X]$ tel que :
-    $$f(x) \underset{x \to 0}{=} Q(x)  + o\bigl(x^n\bigr)$$
+    $$f^{-1}(x) \underset{x \to 0}{=} Q(x)  + o\bigl(x^n\bigr)$$
     Ce polynôme $Q$ s'identifie en résolvant :
     $$x \underset{x \to 0}{=} f^{-1} \circ f(x) + o\bigl(x^n\bigr)$$
 \end{proposition}
@@ -165,14 +165,14 @@ $$P = \sum_{k=0}^{n}\frac{f^{(k)}(x_0)}{k!}(X-x_0)^k$$
     Le développement limité au rang $n \in \N$ de $x \mapsto \sin(x)$ en $0$ est :
     \begin{align*}
         \sin(x) &\underset{x \to 0}{=} \sum_{k=0}^{\lfloor \frac{n-1}{2} \rfloor} \frac{(-1)^{k}x^{2k+1}}{(2k+1)!} \, + o(x^n) \\
-        &\underset{x \to 0}{=} x - \frac{x^3}{3!} + \frac{x^5}{5!} - \frac{x^7}{7!} + \dots + \frac{(-1)^{\lfloor \frac{n-1}{2}\rfloor} x^{(2\lfloor\frac{n-1}{2}\rfloor)}}{(2\lfloor\frac{n-1}{2}\rfloor)!} + o(x^n)
+        &\underset{x \to 0}{=} x - \frac{x^3}{3!} + \frac{x^5}{5!} - \frac{x^7}{7!} + \dots + \frac{(-1)^{\lfloor \frac{n-1}{2}\rfloor} x^{(2\lfloor\frac{n-1}{2}\rfloor+1)}}{(2\lfloor\frac{n-1}{2}\rfloor+1)!} + o(x^n)
     \end{align*}
 \end{proposition}
 
 \begin{proposition}{25.87 (5)}{DL de $x \mapsto \tan(x)$}
     Le développement limité au rang $10$ de $x \mapsto \tan(x)$ en $0$ est :
     \begin{align*}
-        \tan(x) \underset{x \to 0}{=} x + \frac{1}{3}x^3 + \frac{2}{15}x^5 + \frac{17}{315}x^7 + \frac{63}{2835} x^9+ o(x^{10})
+        \tan(x) \underset{x \to 0}{=} x + \frac{1}{3}x^3 + \frac{2}{15}x^5 + \frac{17}{315}x^7 + \frac{62}{2835} x^9+ o(x^{10})
     \end{align*}
 \end{proposition}
 
