--- a/archives maths/C25/cours.tex
+++ b/archives maths/C25/cours.tex
@@ -34,7 +34,7 @@ $$P = \sum_{k=0}^{n}\frac{f^{(k)}(x_0)}{k!}(X-x_0)^k$$
 
 \begin{proposition}{25.34}{formule de Taylor pour les polynômes}
     Pour tous $n \in \N$ et $x_0 \in \R$, on a :
-    $$\forall P \in \R_n[X],\, P = \sum_{k=0}^{n}\frac{P^{(k)}(x_0)}{k!}(x-x_0)^k$$
+    $$\forall P \in \R_n[X],\, P = \sum_{k=0}^{n}\frac{P^{(k)}(x_0)}{k!}(X-x_0)^k$$
 \end{proposition}
 
 \begin{definition}{25.36}{développement limité}
