--- a/archives maths/C16/16-105/16-105.tex
+++ b/archives maths/C16/16-105/16-105.tex
@@ -1,7 +1,9 @@
+\input{../../stock/en-tete_v4.tex}
+\begin{document}
+\begin{adjustwidth}{-3cm}{-3cm}
 \input{../../stock/commands.tex}
-\input{../../stock/en-tete_v1.tex}
 
-\begin{theoreme}{16.105}{ - propriétés de la $P$-évalutation}
+\begin{theoreme}{16.105}{propriétés de la $P$-évalutation}
     Soit $(Q,R) \in (\mb{K}[X])^2$, $P \in \mc{I}_{\mb{K}[X]}$. On a :
     \begin{enumeratebf}
         \item $v_P(Q) > 0 \Leftrightarrow P \mid Q$
