--- a/archives maths/C18/18-30.tex
+++ b/archives maths/C18/18-30.tex
@@ -1,8 +1,11 @@
+\input{../../stock/en-tete_v4.tex}
+\begin{document}
+\begin{adjustwidth}{-3cm}{-3cm}
 \input{../../stock/commands.tex}
-\input{../../stock/en-tete_v1.tex}
 
-\begin{theoreme}{18.30}{- CS sur $f'$ pour que $f$ soit lipschitzienne}
-    Soit $f$ une fonction dérivable sur un intervalle $I$. Si $f'$ est bornée sur $I$, alors $f$ est lipschitzienne sur $I$. Plus précisément, si $k$ est un majorant de $|f'|$ sur $I$, alors $f$ est $k$-lipschitzienne.
+\begin{theoreme}{18.30}{caractérisation du caractère lipschitzien par la dérivée}
+    Soit $f$ une fonction dérivable sur un intervalle $I$. $f$ est lipschitzienne sur $I$ si et seulement si $f'$ est bornée sur $I$. \\ \\
+    Le cas échéant, si $k \in \R$ est un majorant de $|f'|$ sur $I$, alors $f$ est $k$-lipschitzienne.
 \end{theoreme}
 
 \input{../../stock/pied.tex}
