--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -23,6 +23,8 @@
 \newcommand{\seg}[2]{[#1\, ; \, #2]}
 \newcommand{\mat}[1]{\text{Mat}_{#1}}
 \newcommand{\matrice}[1]{\mathcal{M}_{#1}}
+\newcommand{\scal}[2]{\left\langle #1 ,\, #2 \right\rangle}
+\newcommand{\norme}[1]{||#1||}
 
 
 
