--- a/archives maths/C16/16-105/16-105.tex
+++ b/archives maths/C16/16-105/16-105.tex
@@ -1,7 +1,7 @@
-\input{../../stock/en-tete_v4.tex}
+\input{../../../stock/en-tete_v4.tex}
 \begin{document}
 \begin{adjustwidth}{-3cm}{-3cm}
-\input{../../stock/commands.tex}
+\input{../../../stock/commands.tex}
 
 \begin{theoreme}{16.105}{propriétés de la $P$-évalutation}
     Soit $(Q,R) \in (\mb{K}[X])^2$, $P \in \mc{I}_{\mb{K}[X]}$. On a :
@@ -9,9 +9,9 @@
         \item $v_P(Q) > 0 \Leftrightarrow P \mid Q$
         \item $v_P(QR) = v_P(Q) + v_P(R)$
         \item $v_P(Q + R) \geq \min(v_P(Q),v_P(R))$, avec égalité si les évaluations sont distinctes.
-        \item $Q \mid R \Leftrightarrow \forall I \in mc{I}_{\mb{K}[X]}, v_I(Q) \leq v_I(R)$
-        \item Si $Q$ et $R$ sont non nuls, alors : $$v_P(Q \wedge R) = \min(v_P(Q),v_P(R)) et v_P(Q \vee R) = \max(v_P(Q),v_P(R))$$
+        \item $Q \mid R \Leftrightarrow \forall I \in \mc{I}_{\mb{K}[X]}, v_I(Q) \leq v_I(R)$
+        \item Si $Q$ et $R$ sont non nuls, alors : $$v_P(Q \wedge R) = \min(v_P(Q),v_P(R))\quad \text{et}\quad v_P(Q \vee R) = \max(v_P(Q),v_P(R))$$
     \end{enumeratebf}
 \end{theoreme}
 
-\input{../../stock/pied.tex}
+\input{../../../stock/pied.tex}
