--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -25,6 +25,9 @@
 \newcommand{\matrice}[1]{\mathcal{M}_{#1}}
 \newcommand{\scal}[2]{\left\langle #1 ,\, #2 \right\rangle}
 \newcommand{\norme}[1]{||#1||}
+\newcommand{\inte}[2]{\int_{#1}^{#2}}
+\newcommand{\som}[2]{\sum_{#1}^{#2}}
+\renewcommand{\d}[1]{\,\text{d}#1}
 
 
 
