--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -19,7 +19,7 @@
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\bigO}{\mathcal{O}}
 
-\newcommand{\intint}[1]{\llbracket #1 \rrbracket}
+\newcommand{\intint}[2]{\llbracket #1 ,\, #2 \rrbracket}
 \newcommand{\seg}[2]{[#1\, ; \, #2]}
 \newcommand{\mat}[1]{\text{Mat}_{#1}}
 \newcommand{\matrice}[1]{\mathcal{M}_{#1}}
