--- a/stock/en-tete_v4.tex
+++ b/stock/en-tete_v4.tex
@@ -52,7 +52,7 @@
   linecolor=black,
   backgroundcolor=mayonnaise,
   innerleftmargin=10pt,
-  innerrightmargin=10pt,
+  innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=\topsep,
@@ -69,7 +69,7 @@
   linecolor=white,
   backgroundcolor=white,
   innerleftmargin=10pt,
-  innerrightmargin=10pt,
+  innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=\topsep,
@@ -86,7 +86,7 @@
   linecolor=black,
   backgroundcolor=magenta,
   innerleftmargin=10pt,
-  innerrightmargin=10pt,
+  innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=\topsep,
@@ -103,7 +103,7 @@
   linecolor=black,
   backgroundcolor=white,
   innerleftmargin=10pt,
-  innerrightmargin=10pt,
+  innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=\topsep,
@@ -120,7 +120,7 @@
   linecolor=white,
   backgroundcolor=white,
   innerleftmargin=10pt,
-  innerrightmargin=10pt,
+  innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=\topsep,
@@ -137,7 +137,7 @@
   linecolor=bleufonce,
   backgroundcolor=white,
   innerleftmargin=10pt,
-  innerrightmargin=10pt,
+  innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=\topsep,
@@ -254,7 +254,7 @@
   linecolor=black,
   backgroundcolor=mayonnaise,
   innerleftmargin=10pt,
-  innerrightmargin=10pt,
+  innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=\topsep,
@@ -289,7 +289,7 @@
   linecolor=black,
   backgroundcolor=mayonnaise,
   innerleftmargin=10pt,
-  innerrightmargin=10pt,
+  innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=\topsep,
@@ -306,7 +306,7 @@
   linecolor=white,
   backgroundcolor=white,
   innerleftmargin=10pt,
-  innerrightmargin=10pt,
+  innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=\topsep,
@@ -323,7 +323,7 @@
   linecolor=black,
   backgroundcolor=magenta,
   innerleftmargin=10pt,
-  innerrightmargin=10pt,
+  innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=\topsep,
@@ -340,7 +340,7 @@
   linecolor=black,
   backgroundcolor=white,
   innerleftmargin=10pt,
-  innerrightmargin=10pt,
+  innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=\topsep,
@@ -357,7 +357,7 @@
   linecolor=white,
   backgroundcolor=white,
   innerleftmargin=10pt,
-  innerrightmargin=10pt,
+  innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=\topsep,
@@ -374,7 +374,7 @@
   linecolor= bleufonce,
   backgroundcolor=white,
   innerleftmargin=10pt,
-  innerrightmargin=10pt,
+  innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=\topsep,
@@ -481,7 +481,7 @@
   linecolor=black,
   backgroundcolor=mayonnaise,
   innerleftmargin=10pt,
-  innerrightmargin=10pt,
+  innerrightmargin=2.5em,
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=\topsep,
