--- a/archives maths/C34/cours.tex
+++ b/archives maths/C34/cours.tex
@@ -109,4 +109,8 @@
     $$F = F^{\bot \bot}$$
 \end{theoreme}
 
+\begin{definition}{34.39}{vecteurs normaux à un hyperplan}
+    Soit $E$ un espace euclidien de dimension $n \neq 0$ et $H$ un hyperplan de $E$. Le sous-espace $H^\bot$ est une droite dont tout vecteur non nul est dit \notion{vecteur normal à $H$}.
+\end{definition}
+
 \input{../../stock/pied.tex}
