--- a/archives maths/C34/cours.tex
+++ b/archives maths/C34/cours.tex
@@ -3,6 +3,12 @@
 \begin{adjustwidth}{-3cm}{-3cm}
 \input{../../stock/commands.tex}
 
+
+\begin{definition}{34.1}{espaces préhilbertien réel, euclidien}
+    Un espace vectoriel réel muni d’un produit scalaire est appelé \notion{espace préhilbertien réel}. 
+    Un espace préhilbertien réel de dimension finie est appelé \notion{espace euclidien}.
+\end{definition}
+
 \begin{definition}{34.11 (1)}{norme associée à un produit scalaire}
     Soit $E$ un espace préhilbertien réel. On appelle \notion{norme euclidienne sur $E$} l'application :
     \begin{align*}
