--- a/archives maths/C21/cours.tex
+++ b/archives maths/C21/cours.tex
@@ -8,4 +8,10 @@
     Comme $\mb{K}[X]$ est principal, il existe un unique polynôme unitaire $D \in \mb{K}[X]$ tel que : $$ I = D \mb{K}[X] $$ Ce polynôme $D$ est appelé \notion{polynôme minimal} de $u$. Il n'existe que si $u$ admet au moins un polynôme annulateur non nul.
 \end{definition} 
 
+\begin{definition}{21.48}{endomorphisme diagonalisable, valeurs propres}
+    Un endomorphisme $u$ de $E$ est \notion{diagonalisable} s'il existe une base $(b_i)_{i\in I}$ de $E$ et une famille $(\lambda_i)_{i\in I}$ de scalaires telles que : 
+    $$\forall i \in I,\, u(b_i) = \lambda_i b_i$$
+    les $\lambda_i$ sont appelés \notion{valeurs propres} de $u$.
+\end{definition}
+
 \input{../../stock/pied.tex}
