--- a/archives maths/C21/cours.tex
+++ b/archives maths/C21/cours.tex
@@ -3,6 +3,10 @@
 \begin{adjustwidth}{-3cm}{-3cm}
 \input{../../stock/commands.tex}
 
+\begin{definition}{21.32}{endomorphisme nilpotent}
+    Soit $E$ un espace vectoriel. On dit qu'un endomorphisme de $E$ est \notion{nilpotent} s'il existe $n \in \N^*$ tel que $u^n = 0_{\mc{L}(E)}$. L'entier $n$ est alors appelé \notion{indice de nilpotence de $u$}.
+\end{definition}
+
 \begin{definition}{21.41}{polynôme minimal}
     L'ensemble $I$ des polynômes annulateur d'un endomorphisme $u$ forme un idéal de $\mb{K}[X]$. \\
     Comme $\mb{K}[X]$ est principal, il existe un unique polynôme unitaire $D \in \mb{K}[X]$ tel que : $$ I = D \mb{K}[X] $$ Ce polynôme $D$ est appelé \notion{polynôme minimal} de $u$. Il n'existe que si $u$ admet au moins un polynôme annulateur non nul.
