--- a/archives maths/C31/cours.tex
+++ b/archives maths/C31/cours.tex
@@ -3,11 +3,18 @@
 \begin{adjustwidth}{-3cm}{-3cm}
 \input{../../stock/commands.tex}
 
+\begin{theoreme}{31.35}{nombre d'applications entre deux ensemble finis}
+    Soit $E$ et $F$ deux ensembles finis. Il existe $\abs{F}^{\abs{E}}$ applications de $E$ vers $F$ : 
+    $$\abs{F^E}=\abs{F}^{\abs{E}}$$
+\end{theoreme}
+
 \begin{theoreme}{31.35}{nombre d'applications injectives entre deux ensemble finis}
 Soit $E$ et $F$ deux ensembles finis. Il existe : \begin{itemize}
     \item 0 application injective de $E$ dans $F$ si $\abs{E} > \abs{F}$
     \item $\displaystyle \frac{\abs{F}!}{(\abs{F} - \abs{E})!}$ sinon.
 \end{itemize}
 \end{theoreme}
+
+
 
 \input{../../stock/pied.tex}
