--- a/archives maths/C30/cours.tex
+++ b/archives maths/C30/cours.tex
@@ -3,15 +3,18 @@
 \begin{adjustwidth}{-3cm}{-3cm}
 \input{../../stock/commands.tex}
 
-\begin{theoreme}{30.22}{unique forme $n$-linéaire alternée envoyant une base finie sur le neutre de $\K$}
-    Soit $E \neq \{0\}$ un $\K$-ev de dimension finie et de base $(e_1,\dots,e_n)$.
-    Il existe une unique application $\varphi \in \mc{L}_n(E)$ alternée telle que $\varphi(e_1,\dots, e_n) = 1$. Cette forme $n$-linéaire est entièrement déterminée par : \begin{enumeratebf}
+\begin{definition}{30.22}{introduction au déterminant}
+    Soit $E \neq \{0\}$ un $\K$-ev de dimension finie et de base $e = (e_1,\dots,e_n)$.
+    Il existe une unique forme $n$-linéaire alternée sur $E$ associant à $(e_1,\dots,e_n)$ la valeur $1$. Cette application est appelée \notion{déterminant dans la base $e$}, est notée $\det_e$, et est entièrement déterminée par : \begin{enumeratebf}
         \item son caractère alterné :
-        $$ \varphi (e_{i_1},\dots, e_{i_n}) = 0\quad \text{s'il existe $j\neq k$ tel que $i_j = i_k$ }$$
+        $$ \textstyle \det _e (e_{i_1},\dots, e_{i_n}) = 0\quad \text{s'il existe $j\neq k$ tel que $i_j = i_k$ }$$
         \item son antisymétrie :
-        $$ \forall \sigma \in \mc{S}_n, \varphi(e_{\sigma(1)},\dots,e_{\sigma(n)}) = \epsilon (\sigma) $$
-    \end{enumeratebf} 
-    Toute autre forme $n$-linéaire alternée sur $E$ est de la forme $\lambda \varphi$, où $\lambda \in \K$.
+        $$ \textstyle \forall \sigma \in \mc{S}_n, \, \det_e(e_{\sigma(1)},\dots,e_{\sigma(n)}) = \epsilon (\sigma) $$
+    \end{enumeratebf}
+\end{definition}
+
+\begin{theoreme}{30.23}{description des formes alternées de $\mc{L}_n(E)$}
+    Quelle que soit $e$ une base de $E$, toute forme $n$-linéaire alternée sur $E$ est de la forme $\lambda \det_e$, où $\lambda \in \K$. 
 \end{theoreme}
 
 \input{../../stock/pied.tex}
