--- a/archives maths/C15/cours.tex
+++ b/archives maths/C15/cours.tex
@@ -4,8 +4,13 @@
 \input{../../stock/commands.tex}
 
 \begin{proposition}{15.6}{limite en un point du domaine de définition}
-    Soit $f:I \to \R$ une fonction, $x_0 \in I$. Si $f$ admet une limite finie en $a$, alors $\displaystyle \lim_{x \to x_0} = f(x_0)$.
+    Soit $f:I \to \R$ une fonction, $x_0 \in I$. Si $f$ admet une limite finie en $x_0$, alors $\displaystyle \lim_{x \to x_0} = f(x_0)$.
 \end{proposition}
+
+\begin{theoreme}{15.59}{des valeurs intermédiaires}
+    Soit $f$ une fonction continue sur un intervalle réel $\seg{a}{b}$. Alors tout réel compris entre $f(a)$ et $f(b)$ est atteint par $f$ sur $\seg{a}{b}$.
+\end{theoreme}
+
 
 \begin{definition}{15.66}{compacité}
     Soit $I \subset \R$. On dit que $I$ est compact si de toute suite d'éléments de $I$ on peut extraire une suite convergeant dans $I$.
