--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -18,16 +18,18 @@
 
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\bigO}{\mathcal{O}}
+\renewcommand{\L}{\mathcal{L}}
 
-\newcommand{\intint}[2]{\llbracket #1 ,\, #2 \rrbracket}
-\newcommand{\seg}[2]{[#1\, ; \, #2]}
+\newcommand{\rg}[0]{\text{rg}}
 \newcommand{\mat}[1]{\text{Mat}_{#1}}
 \newcommand{\matrice}[1]{\mathcal{M}_{#1}}
-\newcommand{\scal}[2]{\left\langle #1 ,\, #2 \right\rangle}
 \newcommand{\norme}[1]{||#1||}
-\newcommand{\inte}[2]{\int_{#1}^{#2}}
-\newcommand{\som}[2]{\sum_{#1}^{#2}}
 \renewcommand{\d}[1]{\,\text{d}#1}
+\newcommand{\intint}[2]{\llbracket #1 ,\, #2 \rrbracket}
+\newcommand{\seg}[2]{[#1\, ; \, #2]}
+\newcommand{\scal}[2]{\left\langle #1 ,\, #2 \right\rangle}
+\newcommand{\inte}[2]{\int_{#1}^{#2}}
+\newcommand{\somme}[2]{\sum_{#1}^{#2}}
 
 
 
