--- a/archives maths/C22/cours.tex
+++ b/archives maths/C22/cours.tex
@@ -9,9 +9,9 @@
 \end{proposition}
 
 \begin{theoreme}{22.40}{effet de la composition sur le rang}
-    Soit $u \in \L(E,F)$ et $v \in \L(F,G)$. Alors :
+    Soit $E$, $F$ et $G$ des $\K$-espaces vectoriels de dimension finie. Soit $u \in \L(E,F)$ et $v \in \L(F,G)$. Alors~:
     \begin{enumeratebf}
-        \item $\rg(v \circ u) \leq \min(\rg(u,\, \rg(v)))$
+        \item $\rg(v \circ u) \leq \min(\rg(u),\, \rg(v))$
         \item si $v$ est injective, alors $\rg(v \circ u) = \rg(u)$
         \item si $u$ est surjective, alors $\rg(v \circ u) = \rg(v)$  
     \end{enumeratebf}
