--- a/archives maths/C34/cours.tex
+++ b/archives maths/C34/cours.tex
@@ -69,7 +69,7 @@
 
 \begin{definition}{34.19 (4)}{famille orthonormée}
     Soit $E$ un espace préhilbertien réel, $(x_i)_{i \in I}$ une famille d'éléments de $E$.
-    On dit que $(x_i)_{i \in I}$ est \notion{orthonormée} si elle est \underline{orthogonale} et \underline{constituée de vecteurs unitaires}, \ie :
+    On dit que $(x_i)_{i \in I}$ est \notion{orthonormée} si elle est {orthogonale} et {constituée de vecteurs unitaires}, \ie :
     $$\forall (i,j) \in I^2, \,\scal{x_i}{x_j} = \delta_{ij}$$
 \end{definition}
 
