--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -21,6 +21,8 @@
 \renewcommand{\L}{\mathcal{L}}
 
 \newcommand{\rg}[0]{\text{rg}}
+\newcommand{\re}[0]{\text{Re}}
+\newcommand{\im}[0]{\text{Im}}
 \newcommand{\mat}[1]{\text{Mat}_{#1}}
 \newcommand{\matrice}[1]{\mathcal{M}_{#1}}
 \newcommand{\norme}[1]{||#1||}
