--- a/archives maths/C06/cours.tex
+++ b/archives maths/C06/cours.tex
@@ -6,7 +6,7 @@
 \begin{proposition}{6.11}{partie réelle, partie imaginaire}
     On a~:
     \begin{enumeratebf}
-        \item $\re$ et $\im$ sont des endomorphismes du $\mb{R}$-espace vectoriel $\mb{C}$.
+        \item $\re$ et $\im$ sont des applications linéaires du $\mb{R}$-espace vectoriel $\mb{C}$ sur le $\mb{R}$-espace vectoriel $\R$.
         \item $ \displaystyle \forall z \in \mb{C},\,
         \begin{cases*}
             \re(z) = \frac{z+\overline{z}}{2} \\
