--- a/flash_card.tex
+++ b/flash_card.tex
@@ -41,15 +41,25 @@
 
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\bigO}{\mathcal{O}}
+\renewcommand{\L}{\mathcal{L}}
 
-\newcommand{\intint}[2]{\llbracket #1,#2 \rrbracket}
-\newcommand{\seg}[2]{[#1\, ; \, #2]}
+\newcommand{\rg}[0]{\text{rg}}
+\newcommand{\re}[0]{\text{Re}}
+\newcommand{\im}[0]{\text{Im}}
 \newcommand{\mat}[1]{\text{Mat}_{#1}}
 \newcommand{\matrice}[1]{\mathcal{M}_{#1}}
+\newcommand{\norme}[1]{||#1||}
+\renewcommand{\d}[1]{\,\text{d}#1}
+\newcommand{\intint}[2]{\llbracket #1 ,\, #2 \rrbracket}
+\newcommand{\seg}[2]{[#1\, ; \, #2]}
+\newcommand{\scal}[2]{\left\langle #1 ,\, #2 \right\rangle}
+\newcommand{\inte}[2]{\int_{#1}^{#2}}
+\newcommand{\somme}[2]{\sum_{#1}^{#2}}
 
 
 
 
+$$\d{z} = \frac{1}{2g} \frac{v_l^2}{v^2-v_l^2} \d{v^2}$$
 
 \end{adjustwidth}
 \end{document}
