--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -25,6 +25,7 @@
 \newcommand{\im}[0]{\text{Im}}
 \newcommand{\mat}[1]{\text{Mat}_{#1}}
 \newcommand{\matrice}[1]{\mathcal{M}_{#1}}
+\newcommand{\sgEngendre}[1]{\left\langle #1 \right\rangle}
 \newcommand{\norme}[1]{||#1||}
 \renewcommand{\d}[1]{\,\text{d}#1}
 \newcommand{\intint}[2]{\llbracket #1 ,\, #2 \rrbracket}
