--- a/spé archives maths/C01/cours.tex
+++ b/spé archives maths/C01/cours.tex
@@ -13,4 +13,13 @@
     Soit $(G, \star)$ un groupe et $A$ une partie de $G$. Alors $\sgEngendre{A}$ est, au sens de l’inclusion, le plus petit sous-groupe de $G$ contenant $A$.
 \end{proposition}
 
+\begin{definition}{1.35}{groupe monogène}
+    Un groupe $(G, \star)$ est \notion{monogène} lorsqu’il est engendré par un seul de ses éléments. En d’autres termes, s'il existe $g \in G$ tel que $ G = \sgEngendre{\{g\}}$ (ou $\sgEngendre{g}$).\\
+Dans ce cas tout élément $g \in G$ tel que $G = \sgEngendre{g}$ est appelé \notion{générateur} de $G$.
+\end{definition}
+
+\begin{definition}{1.35 bis}{groupe cyclique}
+    Un groupe est dit cyclique s'il est fini et monogène.
+\end{definition}
+
 \input{../../stock/pied.tex}
