--- a/sup archives maths/C10/cours.tex
+++ b/sup archives maths/C10/cours.tex
@@ -3,6 +3,10 @@
 \begin{adjustwidth}{-3cm}{-3cm}
 \input{../../stock/commands.tex}
 
+\begin{theoreme}{10.37}{sous-groupe de $(\mb{Z}, +)$}
+    Soit $G$ un sous-groupe de $(\mb{Z}, +)$. Alors il existe $n \in \mb{Z}$ tel que $G = n \mb{Z}$.
+\end{theoreme}
+
 \begin{theoreme}{10.39}{sous-groupe de $(\R, +)$}
     Soit $G$ un sous-groupe de $(\R, +)$. Alors soit $G$ est dense dans $\R$, soit il existe $\alpha \in \R_+$ tel que $G = \alpha \mb{Z}$.
 \end{theoreme}
