--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -23,6 +23,7 @@
 \newcommand{\rg}[0]{\text{rg}}
 \newcommand{\re}[0]{\text{Re}}
 \newcommand{\im}[0]{\text{Im}}
+\newcommand{\cl}[0]{\text{cl}}
 \newcommand{\mat}[1]{\text{Mat}_{#1}}
 \newcommand{\matrice}[1]{\mathcal{M}_{#1}}
 \newcommand{\sgEngendre}[1]{\left\langle #1 \right\rangle}
