--- a/spé archives maths/C01/cours.tex
+++ b/spé archives maths/C01/cours.tex
@@ -37,5 +37,17 @@ On appelle \notion{représentant} de la classe $\cl(x)$ tout élément $y$ tel q
     \end{enumeratebf}
 \end{theoreme}
 
+\begin{theoreme}{1.62}{de Lagrange}
+    Dans un groupe fini, le cardinal d'un sous-groupe divise le cardinal du groupe.
+\end{theoreme}
+
+\begin{definition}{1.65}{l'ensemble $\Z / n\Z$}
+    L'ensemble des classes d'équivalence pour la congruence modulo $n \in \Z$ est par définition :
+    $$\Z / n\Z = \{ \cl(0),\, \dots,\, \cl(n-1) \}$$
+\end{definition}
+
+\begin{theoreme}{1.67}{groupe quotient $(\Z / n\Z, +)$}
+    L'ensemble $\Z / n\Z$ est un groupe abélien pour la loi $+$ définie par $\cl(a+b) = \cl(a) + \cl(b)$, appelé groupe quotient.
+\end{theoreme}
 
 \input{../../stock/pied.tex}
