--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -15,6 +15,7 @@
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\K}{\mathbb{K}}
+\newcommand{\Z}{\mathbb{Z}}
 
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\bigO}{\mathcal{O}}
