--- a/sup archives maths/C14/cours.tex
+++ b/sup archives maths/C14/cours.tex
@@ -66,5 +66,26 @@
     Si $\lim\limits_{n \in \N} u_n = \ell \in D$ et si $f$ est continue en $\ell$, alors $f(\ell) = \ell$.
 \end{theoreme}
 
+Soit u € K" une suite telle que uo = a, u1 = B et pour tout entier naturel n, Un+2 + aUn+1 + bun = 0, avec
+b + 0.
+1. Si x2 + ax + b = 0 admet une solution double r E K, alors 30, p) € K2, Vn € N. Un = Ar.n + unr".
+2. Si x2 + ax + b = 0 admet deux solutions distinctes r1 E K et T2 E K, alors
+3(X, p) € K', Vn E N, Un = ArR ur?.
+3. De plus, si K = R et (a,b) E R2 (autrement dit si u est une suite récurrente linéaire double réelle), et S?
+12 + ax + b = 0 admet deux solutions complexes conjuguées ri et T2 (c'est-à-dire lorsque a2 - 46 < 0), alors
+r1 = peio avec p e R- et 0 E R, et : 3(a, b) € R2, Vn E N, un = p' (A cos(n6) + B sin(nt)).
+\begin{theoreme}{14.bonus}{suites récurrentes linéaires  du deuxième ordre}
+    Soit $u \in \K^\N$ une suite telle que pour tout $n \in \N,\,  u_{n+2} + au_{n+1} + bu_{n} = 0$ avec $(a,b) \in \K \times \K^*$. On note $P = X^2 + aX + b$ le polynôme caractéristique associé à $(u_n)_{n \in \N}$
+    \begin{enumeratebf}
+        \item Si $P$ admet une racine double $r \in \K$, alors~: 
+        $$\exists (\alpha, \beta) \in \K^2,\, \forall n \in \N ,\,u_n = \alpha r^n + \beta n r^n$$
+        \item Si $P$ admet deux solutions distinctes $r_1$ et $r_2$ dans $\K$, alors~: 
+        $$\exists (\alpha, \beta) \in \K^2,\, \forall n \in \N ,\,u_n = \alpha r_1^n + \beta r_2^n$$
+        \item Si $\K = \R$ et $P$ admet deux solutions complexes conjuguées $r_1 = \rho^{i \theta}$ et $r_2 = \rho^{-i \theta}$ dans $\K$, alors~: 
+        $$\exists (\alpha, \beta) \in \K^2,\, \forall n \in \N ,\,u_n = \rho(\alpha \cos(n \theta) + \beta \sin(n \theta))$$
+    \end{enumeratebf}
+    
+
+\end{theoreme}
 
 \input{../../stock/pied.tex}
