--- a/spé archives maths/C01/cours.tex
+++ b/spé archives maths/C01/cours.tex
@@ -50,4 +50,20 @@ On appelle \notion{représentant} de la classe $\cl(x)$ tout élément $y$ tel q
     L'ensemble $\Z / n\Z$ est un groupe abélien pour la loi $+$ définie par $\cl(a+b) = \cl(a) + \cl(b)$, appelé groupe quotient.
 \end{theoreme}
 
+\begin{theoreme}{1.70}{générateurs de $(\Z /n\Z,\, +)$}
+    Soit $k \in \Z$. la classe $\cl(k)$ génère $(\Z /n\Z,\, +)$ si et seulement si $k \wedge n = 1$.
+\end{theoreme}
+
+\begin{theoreme}{1.71}{produits de groupes quotients}
+    Soit $(n,\, p) \in \N^2$ premiers entre eux. Les groupes $\gpquotient{np}$ et $(\gpquotient{n}) \times (\gpquotient{p})$ sont isomorphes.
+\end{theoreme}
+
+\begin{proposition}{1.75}{description des groupes monogènes}
+    Soit $n \in \Z$.
+    \begin{enumeratebf}
+        \item Tout groupe monogène infini est isomorphe à $\Z$.
+        \item Tout groupe monogène fini (ou cyclique) d’ordre $n$ est isomorphe à $\gpquotient{n}$
+    \end{enumeratebf}
+\end{proposition}
+
 \input{../../stock/pied.tex}
