--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -28,6 +28,7 @@
 \newcommand{\mat}[1]{\text{Mat}_{#1}}
 \newcommand{\matrice}[1]{\mathcal{M}_{#1}}
 \newcommand{\sgEngendre}[1]{\left\langle #1 \right\rangle}
+\newcommand{\gpquotient}[1]{\mathbb{Z} / #1\mathbb{Z}}
 \newcommand{\norme}[1]{||#1||}
 \renewcommand{\d}[1]{\,\text{d}#1}
 \newcommand{\intint}[2]{\llbracket #1 ,\, #2 \rrbracket}
