--- a/spé archives maths/C01/cours.tex
+++ b/spé archives maths/C01/cours.tex
@@ -66,4 +66,8 @@ On appelle \notion{représentant} de la classe $\cl(x)$ tout élément $y$ tel q
     \end{enumeratebf}
 \end{proposition}
 
+\begin{definition}{1.76}{ordre d'un groupe, ordre d'un élément d'un groupe}
+    
+\end{definition}
+
 \input{../../stock/pied.tex}
