--- a/spé archives maths/C01/cours.tex
+++ b/spé archives maths/C01/cours.tex
@@ -66,8 +66,13 @@ On appelle \notion{représentant} de la classe $\cl(x)$ tout élément $y$ tel q
     \end{enumeratebf}
 \end{proposition}
 
-\begin{definition}{1.76}{ordre d'un groupe, ordre d'un élément d'un groupe}
-    
+\begin{definition}{1.76}{ordre d'un groupe fini, ordre d'un élément d'un groupe}
+    On appelle ordre d'un groupe fini son cardinal, qui est dit infini pour un groupe infini.\\
+    On appelle ordre d'un élément $a$ d'un groupe l'ordre du sous-groupe engendré par $a$.
 \end{definition}
+
+\begin{theoreme}{1.79}{ordre d'un élément d'un groupe fini}
+    L'ordre d'un élément d'un groupe fini divise le cardinal du groupe.
+\end{theoreme}
 
 \input{../../stock/pied.tex}
