--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -25,6 +25,7 @@
 \newcommand{\re}[0]{\text{Re}}
 \newcommand{\im}[0]{\text{Im}}
 \newcommand{\cl}[0]{\text{cl}}
+\renewcommand{\vec}[1]{\overrightarrow{#1}}
 \newcommand{\mat}[1]{\text{Mat}_{#1}}
 \newcommand{\matrice}[1]{\mathcal{M}_{#1}}
 \newcommand{\sgEngendre}[1]{\left\langle #1 \right\rangle}
@@ -36,6 +37,7 @@
 \newcommand{\scal}[2]{\left\langle #1 ,\, #2 \right\rangle}
 \newcommand{\inte}[2]{\int_{#1}^{#2}}
 \newcommand{\somme}[2]{\sum_{#1}^{#2}}
+\newcommand{\deriveref}[4]{\biggl( \frac{\text{d}^{#1}#2}{\text{d}#3^{#1}} \biggr)_{#4}}
 
 
 
