--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -34,7 +34,8 @@
 \renewcommand{\d}[1]{\,\text{d}#1}
 \newcommand{\intint}[2]{\llbracket #1 ,\, #2 \rrbracket}
 \newcommand{\seg}[2]{[#1\, ; \, #2]}
-\newcommand{\scal}[2]{\left\langle #1 ,\, #2 \right\rangle}
+\newcommand{\scal}[2]{( #1 | #2 )}
+\newcommand{\distance}[2]{\text{d}(#1,\,#2)}
 \newcommand{\inte}[2]{\int_{#1}^{#2}}
 \newcommand{\somme}[2]{\sum_{#1}^{#2}}
 \newcommand{\deriveref}[4]{\biggl( \frac{\text{d}^{#1}#2}{\text{d}#3^{#1}} \biggr)_{#4}}
